Change java.security.egd